samples/_failures_safe/1761362330_90f472_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e2e9a83.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_2e2e9a83.c:188:5: error: expected ‘,’ or ‘;’ at end of input
  188 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_2e2e9a83.c:188:5: error: expected declaration or statement at end of input
